<resources>
    <string name="app_name">nhopvph06243_ASS</string>
    <string name="content">Cửa hàng sách tuyệt đẹp này nằm ở thành phố Buenos Aires của Argentina, trong một nhà hát cũ. Nhà hát mở cửa từ năm 1919, biểu diễn các chương trình bale, opera và nhiều chương trình khác. Đến năm 2000, tòa nhà này chuyển thành hiệu sách nhưng vẫn giữ lại toàn bộ các trang trí cũ, bao gồm cả vòm mái trung tâm được sơn theo phong cách frescoes của Ý. Đây là nơi thu hút rất nhiều khách du lịch, có đến 120.000 cuốn sách và cả một cửa hàng cà phê.Cửa hàng sách tuyệt đẹp này nằm ở thành phố Buenos Aires của Argentina, trong một nhà hát cũ. Nhà hát mở cửa từ năm 1919, biểu diễn các chương trình bale, opera và nhiều chương trình khác. Đến năm 2000, tòa nhà này chuyển thành hiệu sách nhưng vẫn giữ lại toàn bộ các trang trí cũ, bao gồm cả vòm mái trung tâm được sơn theo phong cách frescoes của Ý. Đây là nơi thu hút rất nhiều khách du lịch, có đến 120.000 cuốn sách và cả một cửa hàng cà phê.Cửa hàng sách tuyệt đẹp này nằm ở thành phố Buenos Aires của Argentina, trong một nhà hát cũ. Nhà hát mở cửa từ năm 1919, biểu diễn các chương trình bale, opera và nhiều chương trình khác. Đến năm 2000, tòa nhà này chuyển thành hiệu sách nhưng vẫn giữ lại toàn bộ các trang trí cũ, bao gồm cả vòm mái trung tâm được sơn theo phong cách frescoes của Ý. Đây là nơi thu hút rất nhiều khách du lịch, có đến 120.000 cuốn sách và cả một cửa hàng cà phê.
    Cửa hàng sách tuyệt đẹp này nằm ở thành phố Buenos Aires của Argentina, trong một nhà hát cũ. Nhà hát mở cửa từ năm 1919, biểu diễn các chương trình bale, opera và nhiều chương trình khác. Đến năm 2000, tòa nhà này chuyển thành hiệu sách nhưng vẫn giữ lại toàn bộ các trang trí cũ, bao gồm cả vòm mái trung tâm được sơn theo phong cách frescoes của Ý. Đây là nơi thu hút rất nhiều khách du lịch, có đến 120.000 cuốn sách và cả một cửa hàng cà phê.Cửa hàng sách tuyệt đẹp này nằm ở thành phố Buenos Aires của Argentina, trong một nhà hát cũ. Nhà hát mở cửa từ năm 1919, biểu diễn các chương trình bale, opera và nhiều chương trình khác. Đến năm 2000, tòa nhà này chuyển thành hiệu sách nhưng vẫn giữ lại toàn bộ các trang trí cũ, bao gồm cả vòm mái trung tâm được sơn theo phong cách frescoes của Ý. Đây là nơi thu hút rất nhiều khách du lịch, có đến 120.000 cuốn sách và cả một cửa hàng cà phê.Cửa hàng sách tuyệt đẹp này nằm ở thành phố Buenos Aires của Argentina, trong một nhà hát cũ. Nhà hát mở cửa từ năm 1919, biểu diễn các chương trình bale, opera và nhiều chương trình khác. Đến năm 2000, tòa nhà này chuyển thành hiệu sách nhưng vẫn giữ lại toàn bộ các trang trí cũ, bao gồm cả vòm mái trung tâm được sơn theo phong cách frescoes của Ý. Đây là nơi thu hút rất nhiều khách du lịch, có đến 120.000 cuốn sách và cả một cửa hàng cà phê.
    Cửa hàng sách tuyệt đẹp này nằm ở thành phố Buenos Aires của Argentina, trong một nhà hát cũ. Nhà hát mở cửa từ năm 1919, biểu diễn các chương trình bale, opera và nhiều chương trình khác. Đến năm 2000, tòa nhà này chuyển thành hiệu sách nhưng vẫn giữ lại toàn bộ các trang trí cũ, bao gồm cả vòm mái trung tâm được sơn theo phong cách frescoes của Ý. Đây là nơi thu hút rất nhiều khách du lịch, có đến 120.000 cuốn sách và cả một cửa hàng cà phê.Cửa hàng sách tuyệt đẹp này nằm ở thành phố Buenos Aires của Argentina, trong một nhà hát cũ. Nhà hát mở cửa từ năm 1919, biểu diễn các chương trình bale, opera và nhiều chương trình khác. Đến năm 2000, tòa nhà này chuyển thành hiệu sách nhưng vẫn giữ lại toàn bộ các trang trí cũ, bao gồm cả vòm mái trung tâm được sơn theo phong cách frescoes của Ý. Đây là nơi thu hút rất nhiều khách du lịch, có đến 120.000 cuốn sách và cả một cửa hàng cà phê.Cửa hàng sách tuyệt đẹp này nằm ở thành phố Buenos Aires của Argentina, trong một nhà hát cũ. Nhà hát mở cửa từ năm 1919, biểu diễn các chương trình bale, opera và nhiều chương trình khác. Đến năm 2000, tòa nhà này chuyển thành hiệu sách nhưng vẫn giữ lại toàn bộ các trang trí cũ, bao gồm cả vòm mái trung tâm được sơn theo phong cách frescoes của Ý. Đây là nơi thu hút rất nhiều khách du lịch, có đến 120.000 cuốn sách và cả một cửa hàng cà phê.</string>
    <string name="notify_empty_user_name">Không được bỏ trống !</string>
    <string name="notify_empty_pass_word">Không được bỏ trống !</string>
    <string name="notify_min_length_pass">Mật khẩu phải lớn hơn 6 ký tự !</string>
    <string name="notify_empty_user">UserName không được để trống !</string>
    <string name="notify_length_pass">Password phải lớn hơn 6 ký tự !</string>
    <string name="notify_empty_pass">Password không được để trống !</string>
    <string name="title_add_user">Thêm người dùng</string>
    <string name="notify_pass_khong_khop">Nhập lại mật khẩu không khớp !</string>
    <string name="doi_pass">Đã đổi mật khẩu cho</string>
    <string name="doi_passtb">Đổi mật khẩu thất bại !</string>
    <string name="title_user">Người dùng</string>
    <string name="title_home">Trang chủ</string>
    <string name="user_not_exitst">UserName không tồn tại !</string>
    <string name="wrong_pass">Password không đúng</string>
    <string name="hello">Mừng bạn quay trở lại</string>
    <string name="title_typebook">Thể loại</string>
    <string name="title_top10_book">Top 10 sách bán chạy theo tháng</string>
    <string name="notify_empty_pass2">Yêu cầu nhập lại mật khẩu</string>
    <string name="notify_empty_name">Tên không được để trống</string>
    <string name="notify_empty_sdt">Số điện thoại không được để trống</string>
    <string name="notify_length_user">User Name không quá 50 kí tự</string>
    <string name="notify_length_pass2">Password không quá 50 kí tự</string>
    <string name="notify_length_name">Tên không quá 50 ký tự</string>
    <string name="notify_same_pass">Password không khớp</string>
    <string name="notify_same_sdt">Sai định dạng</string>
    <string name="admin">ADMIN</string>
    <string name="addUserName">Đã thêm :</string>
    <string name="failed">Thêm thất bại</string>
    <string name="user_exits">User Name đã tồn tại</string>
    <string name="permision">Bạn không được cấp quyền</string>
    <string name="title_dialog_sign_out">Đăng xuất</string>
    <string name="message_dialog_sign_out">Bạn muốn đăng xuất ?</string>
    <string name="yes">Có</string>
    <string name="question_delete_user">Bạn muốn xóa </string>
    <string name="cannot_delete_admin">không thể xóa tài khoản quản trị</string>
    <string name="deleted_user">Đã xóa User Name :</string>
    <string name="deleted_failed">Xóa thất bại</string>
    <string name="no">Không</string>
    <string name="editedUser">Đã sửa User Name :</string>
    <string name="edited_faied">Sửa thất bại</string>
    <string name="passOld">Nhập mật khẩu cũ</string>
    <string name="passNew2">Nhập lại mật khẩu mới</string>
    <string name="passNew">Nhập mật khẩu mới</string>
    <string name="title_changePassword">Đổi mật khẩu</string>
    <string name="notify_empty_passold">Nhập mật khẩu cũ</string>
    <string name="notify_empty_passnew">Nhập mật khẩu mới</string>
    <string name="notify_empty_passnew2">Nhập lại mật khẩu mới</string>
    <string name="change_pass_success">Đổi mật khẩu thành công</string>
    <string name="change_pass_failed">Đôit mật khẩu thất bại</string>
    <string name="delete_message_type_book">Bạn muốn xóa </string>
    <string name="deleted_typeBook">Bạn chưa xóa sách thuộc thể loại này !</string>
    <string name="deleted_TypeBook">Đã xóa</string>
    <string name="typebookName">Tên thể loại</string>
    <string name="des">Mô tả</string>
    <string name="pos">Vị trí</string>
    <string name="edit">Xác nhận</string>
    <string name="cancel">Hủy</string>
    <string name="notify_empty_NameTypeBook">Nhập tên thể loại</string>
    <string name="notify_empty_Description">Nhập mô tả</string>
    <string name="notify_empty_Position">Nhập vị trí của thể loại</string>
    <string name="notify_length_nameTypeBook">Tên thể loại không quá 50 kí tự</string>
    <string name="notify_length_Des">Mô tả không quá 255 kí tự</string>
    <string name="editedTypeBook">Đã sửa</string>
    <string name="notify_empty_IDTypeBook">Nhập mã thể loại</string>
    <string name="notify_length_typebookID">Mã thể loại không quá 5 kí tự</string>
    <string name="add_successfully_typebook">Đã thêm</string>
    <string name="add_failed_typebook">Thêm thất bại !</string>
    <string name="notify_typebook_exists">Mã thể loại đã tồn tại</string>
    <string name="delete_message_book">Bạn muốn xóa sách </string>
    <string name="deleted_book">Đã xóa mã sách</string>
    <string name="delete_book_BillDetail">bạn chưa xóa sách này trong hóa đơn</string>
    <string name="bookName">Tên sách</string>
    <string name="author">Tên tác giả</string>
    <string name="NXB">Nhà xuất bản</string>
    <string name="price">Giá</string>
    <string name="quantity">Số lượng</string>
    <string name="add_typeBook">Chưa có thể loại sách</string>
    <string name="notify_empty_BookName">Nhập tên sách</string>
    <string name="notify_empty_BookAuthor">Nhập tên tác giả</string>
    <string name="notify_empty_NXB">Nhập tên nhà xuất bản</string>
    <string name="notify_empty_BookPrice">Nhập giá sách</string>
    <string name="notify_empty_Quantity">Nhập số lượng sách</string>
    <string name="notify_length_Author">Tên tác giả không quá 50 kí tự</string>
    <string name="notify_length_NXB">Tên nhà xuất bản không quá 50 kí tự</string>
    <string name="notify_length_BookName">Tên sách không quá 50 kí tự</string>
    <string name="notify_Quantity_Old">Sô lượng sách ít hơn trong hóa đơn</string>
    <string name="editedBook">Đã sửa</string>
    <string name="bookID">Mã sách</string>
    <string name="priceBook">Giá bìa</string>
    <string name="adđ">Thêm</string>
    <string name="notify_empty_BookID">Nhập mã sách</string>
    <string name="notify_length_BookID">Mã sách không quá 5 kí tự</string>
    <string name="title_add_book">Thêm sách</string>
    <string name="notify_BookID_exists">Mã sách đã tồn tại</string>
    <string name="add_successfully_book">Đã thêm</string>
    <string name="add_failed_book">Thêm thất bại !</string>
    <string name="title_bill">Hóa đơn</string>
    <string name="delete_message_bill">Bạn muốn xóa</string>
    <string name="deleted">Đã xóa</string>
    <string name="delete_billDetail">Chưa xóa hóa đơn chi tiết của hóa đơn này !</string>
    <string name="pickdate">Ngày thêm hóa đơn</string>
    <string name="pick">Chọn ngày</string>
    <string name="pick_date">Chưa chọn ngày</string>
    <string name="editedBill">Đã sửa</string>
    <string name="title_add_book_type">Thêm thể loại</string>
    <string name="delete_message_billdetail">Bạn muốn xóa hóa đơn chi tiết </string>
    <string name="delete">Đã xóa</string>
    <string name="notify_Quantity_equal_0">Số lượng lớn hơn 0</string>
    <string name="notify_BookID_not_exists">Mã sách không tồn tại</string>
    <string name="add_failed_bill">Thêm thất bại</string>
    <string name="addBillDetail">Đã thêm</string>
    <string name="notify_Quantity">Sách này chỉ còn </string>
    <string name="editedBill_Detail">Đã thêm</string>
    <string name="typebookID">Mã thể loại</string>
    <string name="position">Vị trí</string>
    <string name="search">Nhập mã cần tìm ở đây</string>
    <string name="title_book">Sách</string>
    <string name="NumberPhone">Số điện thoại</string>
    <string name="FullName">Họ và tên</string>
    <string name="Password">Mật khẩu</string>
    <string name="UserName">Tên đăng nhập</string>
    <string name="notify_BillID_exists">Mã hóa đơn đã tồn tại</string>
    <string name="addBill">Đã thêm</string>
    <string name="notify_max_bill_id">Mã hóa đơn không quá 7 kí tự</string>
    <string name="notify_empty_BillID">Nhập mã hóa đơn</string>
    <string name="BillID">Mã hóa đơn</string>
    <string name="title_statistics">Thống kê</string>
    <string name="title_introduce">Phương Nam</string>
</resources>
