<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="16dp"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:src="@drawable/logo_nhasachphuongnam"
        tools:ignore="ContentDescription" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterMaxLength="50"
        app:counterEnabled="true">
        <EditText
            android:id="@+id/edtBook_Name_Dialog_Edit_Book"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bookName"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:gravity="end"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Spinner
            android:id="@+id/spnType_Book_ID_Dialog_Edit_Book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </Spinner>

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterMaxLength="50"
        app:counterEnabled="true">
        <EditText
            android:inputType="text"
            android:id="@+id/edtAuthor_Dialog_Edit_Book"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/author"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterMaxLength="50"
        app:counterEnabled="true">
        <EditText
            android:inputType="text"
            android:id="@+id/edtNXB_Dialog_Edit_Book"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/NXB"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:inputType="number"
            android:id="@+id/edtPrice_Dialog_Edit_Book"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:inputType="number"
            android:id="@+id/edtQuantity_Dialog_Edit_Book"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quantity"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_marginBottom="3dp"
            android:id="@+id/btnEdit_Dialog_Edit_Book"
            android:textAllCaps="false"
            android:text="@string/edit"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <Button
            android:layout_marginBottom="3dp"
            android:id="@+id/btnCancel_Dialog_Edit_Book"
            android:textAllCaps="false"
            android:layout_marginStart="10dp"
            android:text="@string/cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>