<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:ignore="Overdraw">

    <ImageView
        android:layout_width="249dp"
        android:layout_height="72dp"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:src="@drawable/logo_nhasachphuongnam"
        tools:ignore="ContentDescription" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:inputType="text"
            android:id="@+id/edtBookID_Dialog_Bill_Detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bookID"
            tools:ignore="Autofill,LabelFor" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:inputType="number"
            android:id="@+id/edtQuantity_Dialog_Bill_Detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quantity"
            tools:ignore="Autofill" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_marginBottom="3dp"
            android:id="@+id/btnAdd_Dialog_Bill_Detail"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/adđ"
            android:textAllCaps="false"
            tools:ignore="ButtonStyle" />

        <Button
            android:layout_marginBottom="3dp"
            android:id="@+id/btnCancel_Dialog_Bill_Detail"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textAllCaps="false"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
</LinearLayout>