<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <LinearLayout
        android:padding="16dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="249dp"
            android:layout_height="72dp"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:src="@drawable/logo_nhasachphuongnam"
            tools:ignore="ContentDescription" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterMaxLength="50"
            app:counterEnabled="true">

            <EditText
                android:id="@+id/edtUserName"
                android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/UserName"
            android:imeOptions="actionNext"
            android:inputType="text"
            tools:ignore="Autofill" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterMaxLength="50"
        app:counterEnabled="true">

        <EditText
            android:id="@+id/edtPasswordInAddUser"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/Password"
            tools:ignore="Autofill" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterMaxLength="50"
        app:counterEnabled="true">

        <EditText
            android:id="@+id/edtChangePasswordInAddUser"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Nhập lại mật khẩu"
            tools:ignore="Autofill,HardcodedText" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edtPhoneNumberInAddUser"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/NumberPhone"
            tools:ignore="Autofill,TextFields" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterMaxLength="50"
        app:counterEnabled="true">

        <EditText
            android:id="@+id/edtName"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/FullName"
            tools:ignore="Autofill" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAddUser_Dialog_Add_User"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:text="@string/adđ"
            android:textAllCaps="false"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnCancel_Dialog_Add_User"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textAllCaps="false"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
    </LinearLayout>
</LinearLayout>