<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:layout_width="300dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:src="@drawable/logo_nhasachphuongnam"
                tools:ignore="ContentDescription" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="7">

                <EditText
                    android:id="@+id/edtBillCode"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/BillID"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    tools:ignore="Autofill" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4">

                    <EditText
                        android:id="@+id/edtBillDate"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="Chọn ngày"
                        android:imeOptions="actionDone"
                        tools:ignore="Autofill,HardcodedText,TextFields" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btnPickDate_Dialog_Add_Bill"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="Chọn"
                    android:textAllCaps="false"
                    tools:ignore="HardcodedText" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnAddBill_Dialog_Add_Bill"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:text="@string/adđ"
                    android:textAllCaps="false"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/btnCancelBill_Dialog_Add_Bill"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>